--- a/src/App.css
+++ b/src/App.css
@@ -1,42 +1,112 @@
 #root {
-  max-width: 1280px;
+  max-width: 650px;
   margin: 0 auto;
-  padding: 2rem;
-  text-align: center;
+  padding: 3rem 2rem;
 }
 
-.logo {
-  height: 6em;
-  padding: 1.5em;
-  will-change: filter;
-  transition: filter 300ms;
-}
-.logo:hover {
-  filter: drop-shadow(0 0 2em #646cffaa);
-}
-.logo.react:hover {
-  filter: drop-shadow(0 0 2em #61dafbaa);
-}
+header {
+  display: flex;
+  align-items: start;
 
-@keyframes logo-spin {
-  from {
-    transform: rotate(0deg);
+  & #logo {
+    margin: 10px;
   }
-  to {
-    transform: rotate(360deg);
-  }
-}
 
-@media (prefers-reduced-motion: no-preference) {
-  a:nth-of-type(2) .logo {
-    animation: logo-spin infinite 20s linear;
+  & #editable {
+    margin-inline: 10px;
+  }
+
+  & .title {
+    display: flex;
+    flex-direction: column;
+    font-size: 20px;
+
+    &>* {
+      margin: 0;
+    }
   }
 }
 
-.card {
-  padding: 2em;
-}
+main>ul {
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+  align-items: center;
+  list-style: none;
+  padding-inline: 20px;
 
-.read-the-docs {
-  color: #888;
+  li {
+    width: 600px;
+    display: flex;
+    border-radius: 16px;
+    align-items: center;
+    justify-content: space-between;
+    background-color: #E3E8EF;
+    padding: 18px;
+
+    & section {
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      gap: 14px;
+
+      &>div {
+        width: 320px;
+        text-align: start;
+
+        &>* {
+          margin: 0;
+        }
+      }
+    }
+
+    & figure {
+      width: 50px;
+      height: 50px;
+      border-radius: 10px;
+      display: grid;
+      place-content: center;
+      margin: 0;
+
+      &>img {
+        scale: .4;
+      }
+
+      &.item__icons {
+        background: #F8FAFC;
+      }
+    }
+
+    &.completed {
+      background-color: #A0ECB1;
+
+      &>.item__status {
+        background: #32D657;
+      }
+    }
+
+    &.progress {
+      background-color: #F5D565;
+
+      &>.item__status {
+        background: #E9A23B;
+      }
+    }
+
+    &.wont {
+      background-color: #F7D4D3;
+
+      &>.item__status {
+        background: #DD524C;
+      }
+    }
+
+    &.item--new {
+      background-color: #F5E8D5;
+
+      figure {
+        background: #E9A23B;
+      }
+    }
+  }
 }
