feat(add modal): :zap:

--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,13 @@
+:root {
+  --border-color: #E3E8EF;
+  --bg-color: #F8FAFC;
+  --bg-completed: #32D657;
+  --bg-progress: #E9A23B;
+  --bg-missing: #DD524C;
+  --bg-icons: #E3E8EF;
+  --outline-fields: #3662E3;
+}
+
 #root {
   max-width: 650px;
   margin: 0 auto;
@@ -73,31 +83,7 @@ main>ul {
       }
 
       &.item__icons {
-        background: #F8FAFC;
-      }
-    }
-
-    &.completed {
-      background-color: #A0ECB1;
-
-      &>.item__status {
-        background: #32D657;
-      }
-    }
-
-    &.progress {
-      background-color: #F5D565;
-
-      &>.item__status {
-        background: #E9A23B;
-      }
-    }
-
-    &.wont {
-      background-color: #F7D4D3;
-
-      &>.item__status {
-        background: #DD524C;
+        background: var(--bg-color);
       }
     }
 
@@ -105,8 +91,209 @@ main>ul {
       background-color: #F5E8D5;
 
       figure {
-        background: #E9A23B;
+        background: var(--bg-progress);
       }
     }
+  }
+}
+
+.completed {
+  background-color: #A0ECB1;
+
+  &>.item__status {
+    background: var(--bg-completed);
+  }
+}
+
+.progress {
+  background-color: #F5D565;
+
+  &>.item__status {
+    background: #E9A23B;
+  }
+}
+
+.wont {
+  background-color: #F7D4D3;
+
+  &>.item__status {
+    background: var(--bg-missing);
+  }
+}
+
+.dark {
+  width: 100vw;
+  height: 100vh;
+  position: absolute;
+  top: 0;
+  background-color: #00000033;
+}
+
+.task--new {
+  position: absolute;
+  right: 0;
+  border-radius: 16px;
+  background-color: var(--bg-color);
+  width: 800px;
+  height: -webkit-fill-available;
+  margin: 16px;
+
+  & .modal__title {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    margin: 0 20px;
+    font-size: 16px;
+
+    & .title__close {
+      cursor: pointer;
+      height: 20px;
+      padding: 6px;
+      border: 1px solid var(--border-color);
+      border-radius: 6px;
+      margin: 0;
+    }
+  }
+
+  & .taks__modal {
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+    margin: 0px 20px;
+
+    label {
+      display: contents;
+    }
+
+    input {
+      padding: 12px;
+      font-size: 16px;
+      border-radius: 8px;
+      border-color: var(--border-color);
+      border-style: solid;
+      background-color: var(--bg-color);
+    }
+
+    textarea {
+      padding: 12px;
+      font-size: 16px;
+      resize: vertical;
+      min-height: 160px;
+      max-height: 300px;
+      border-radius: 8px;
+      border: 2px solid var(--border-color);
+      background-color: var(--bg-color);
+      field-sizing: content;
+    }
+
+    textarea:focus-visible,
+    input:focus-visible {
+      outline: 2px solid var(--outline-fields);
+      border-color: transparent;
+    }
+
+    & .modal__icons {
+      display: flex;
+      height: 50px;
+
+      & .icons__task {
+        width: 30px;
+        height: 30px;
+        margin: 0 10px;
+
+        & img {
+          background-color: var(--bg-icons);
+          border-radius: 10px;
+          width: 100%;
+          padding: 8px;
+          cursor: pointer;
+          object-fit: cover;
+
+          &.icon--selected {
+            background-color: var(--bg-progress);
+          }
+        }
+      }
+    }
+
+    & .modal__status {
+      display: grid;
+      grid-template-columns: repeat(2, 1fr);
+      gap: 10px;
+
+      & .status__field {
+        span {
+          background-color: var(--bg-color);
+          display: flex;
+          align-items: center;
+          gap: 14px;
+          overflow: hidden;
+          border-radius: 14px;
+          padding: 2px;
+          border: 2px solid var(--border-color);
+          position: relative;
+          cursor: pointer;
+
+          .item__status {
+            border-radius: 14px;
+            width: 50px;
+            height: 50px;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            margin: 0;
+          }
+
+          p {
+            margin: 0;
+          }
+
+          & .check {
+            visibility: hidden;
+            margin: 0 14px;
+            position: absolute;
+            right: 0;
+            display: flex;
+            align-items: center;
+            padding: 2px;
+            scale: .8;
+            border-radius: 50%;
+            justify-content: center;
+            background-color: var(--outline-fields);
+          }
+        }
+
+        & .--selected{
+          border-color: var(--outline-fields);
+
+          & > .check{
+            visibility: visible;
+          }
+        }
+      }
+    }
+  }
+}
+
+button {
+  position: absolute;
+  bottom: 0;
+  right: 0;
+  padding: 10px 30px;
+  cursor: pointer;
+  letter-spacing: .5px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 6px;
+  background-color: var(--outline-fields);
+  border: none;
+  border-radius: 30px;
+  margin: 20px;
+  color: var(--bg-color);
+
+  &.btn--delete {
+    background-color: #97A3B6;
+    right: 140px;
   }
 }
