--- a/src/index.css
+++ b/src/index.css
@@ -9,3 +9,9 @@
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
+
+body {
+  height: 100vh;
+  margin: 0;
+  position: relative;
+}
