--- a/src/App.css
+++ b/src/App.css
@@ -125,7 +125,7 @@ main>ul {
 .dark {
   width: 100vw;
   height: 100vh;
-  position: absolute;
+  position: fixed;
   top: 0;
   background-color: #00000033;
 }
@@ -264,10 +264,10 @@ main>ul {
           }
         }
 
-        & .--selected{
+        & .--selected {
           border-color: var(--outline-fields);
 
-          & > .check{
+          &>.check {
             visibility: visible;
           }
         }
@@ -296,5 +296,17 @@ button {
   &.btn--delete {
     background-color: #97A3B6;
     right: 140px;
+  }
+}
+
+.pagination {
+  display: inline-flex;
+
+  & .btn__pagination {
+    position: inherit;
+
+    &:disabled{
+      opacity: .5;
+    }
   }
 }
